# eventkit-mcp-server

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs  server.rs
