[package]
name = "eventkit-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Local MCP server providing tools for macOS Reminders via Apple EventKit"

[[bin]]
name = "eventkit-mcp-server"
path = "src/main.rs"

[dependencies]
highlandcows-eventkit = "0.5.5"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["std"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
